--- a/hypertext.html
+++ b/hypertext.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>Collaborative Canvas</title>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></java>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></java>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></java>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></java>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
